--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -1,8 +1,8 @@
 name: Generate pacman animation
 
 on:
-  schedule: # execute every 12 hours
-    - cron: "* */12 * * *"
+  schedule: # execute every 24 hours
+    - cron: "0 0 * * *"
 
   workflow_dispatch:
 
@@ -31,3 +31,4 @@ jobs:
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
